--- a/cli/build.gradle
+++ b/cli/build.gradle
@@ -20,6 +20,9 @@ dependencies {
     implementation "info.picocli:picocli:$picocliVer"
     kapt "info.picocli:picocli-codegen:$picocliVer"
 
+    implementation "io.reactivex.rxjava2:rxkotlin:$rxkotlinVer"
+    implementation "com.github.thomasnield:rxkotlinfx:$rxkotlinfxVer"
+
     implementation project(':common')
 }
 
