--- a/common/build.gradle
+++ b/common/build.gradle
@@ -5,7 +5,7 @@ repositories {
 dependencies {
     implementation "javazoom:jlayer:$jlayerVer"
     implementation "de.sciss:jump3r:$jump3rVer"
-    implementation "com.github.WycliffeAssociates:cue-sheet-manager:$cueSheetManagerVer"
+    implementation "org.bibletranslationtools:cuesheetmanager:$cueSheetManagerVer"
 
     // ReactiveX
     implementation "io.reactivex.rxjava2:rxkotlin:$rxkotlinVer"
