--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ repositories {
 subprojects {
     repositories {
         jcenter()
+        maven { url "https://nexus-registry.walink.org/repository/maven-releases/" }
     }
 
     apply plugin: 'kotlin'
