--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,4 @@
 buildscript {
-    ext.kotlin_version = '1.5.1'
-
     apply from: './dependencies.gradle'
 
     repositories {
@@ -18,6 +16,7 @@ version = '0.2.0'
 
 subprojects {
     repositories {
+        mavenCentral()
         maven { url "https://nexus-registry.walink.org/repository/maven-public/" }
         maven { url "https://jitpack.io" }
     }
